--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,9 +1,68 @@
 /* Home page style and form */
 input {
-    width: 100%;    
+    width: 100%;   
+     
+}
+input[type=text], select {
+  width: 100%;
+  padding: 22px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+input[type=tel] {
+  width: 100%;
+  padding: 22px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid rgb(219, 45, 45);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type="date"]::-webkit-clear-button {
+  display: none;
+}
+
+/* Removes the spin button */
+input[type="date"]::-webkit-inner-spin-button { 
+  display: none;
+}
+
+/* Always display the drop down caret */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: #2c3e50;
+}
+
+/* A few custom styles for date inputs */
+input[type="date"] {
+  appearance: none;
+  -webkit-appearance: none;
+  color: #95a5a6;
+  font-family: "Helvetica", arial, sans-serif;
+  font-size: 18px;
+  border:1px solid #ecf0f1;
+  background:#ecf0f1;
+  padding:5px;
+  display: inline-block !important;
+  visibility: visible !important;
+}
+
+input[type="date"], focus {
+  color: #95a5a6;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+}
+
+input[type=text]:focus {
+  border: 3px solid #555;
 }
 .container {
-    width: 800px;
+    width: 80%;
     padding: 5px 10px;
     margin-top: 150px;
     margin-bottom: 50px;
@@ -13,7 +72,7 @@ input {
     justify-content: center; 
 }
 input[type=submit] {
-    background-color: #4CAF50;
+    background-color: #693737;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -45,29 +104,33 @@ footer {
     text-align: center;
     margin-top: 60px;
 }
-input[type=text] {
+
+  textarea {
     width: 100%;
+    height: 150px;
     padding: 12px 20px;
-    margin: 8px 0;
-    height: 80px;
     box-sizing: border-box;
-    
-        border: none;
-        border-bottom: 2px solid red;
-      
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
   }
-  #lavoro {
-    display: none;
+  input[type=button]{
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
   }
 
-  #telephone {
-    margin-top: 20px;
-    width: 100%;
-    padding: 12px 20px;
-    border: none;
-    height: 80px;
-    box-sizing: border-box;
-    border-bottom: 2px solid red;
+
+
+  textarea {
+    min-width: 100%;
+    min-height: 200px;
+    resize: none;
   }
   /* Tabelle fetch */
 
@@ -86,3 +149,84 @@ input[type=text] {
   tr:nth-child(even) {
     background-color: #dddddd;
   }
+  
+  @media(max-width: 750px) {
+    .container {
+      width: 100%;
+      margin-top: 0px;
+    }
+  }
+  
+ 
+  #button {
+    display: inline-block;
+    background-color: #FF9800;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 80px;
+    right: 30px;
+    transition: background-color .3s, 
+      opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+    }
+    #button::after {
+    content: "\f077";
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2em;
+    line-height: 50px;
+    color: white;
+    }
+    #button:hover {
+    cursor: pointer;
+    background-color: #333;
+    }
+    #button:active {
+    background-color: #555;
+    }
+    #button.show {
+    opacity: 1;
+    visibility: visible;
+    }
+    #buttonBottom {
+    display: inline-block;
+    background-color: #FF9800;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    transition: background-color .3s, 
+      opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: visible;
+    z-index: 1000;
+    }
+    #buttonBottom::after {
+    content: "\f078";
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2em;
+    line-height: 50px;
+    color: white;
+    }
+    #buttonBottom:hover {
+    cursor: pointer;
+    background-color: #333;
+    }
+    #buttonBottom:active {
+    background-color: #555;
+    }
+    #buttonBottom.show {
+    opacity: 1;
+    visibility: visible;
+    }
